--- a/src/js/alerts.html
+++ b/src/js/alerts.html
@@ -1,5 +1,5 @@
 <div class="elr-alert-holder">
-  <div class="elr-alert elr-success-alert js-dismissible-alert">
+  <div class="elr-alert elr-alert-success js-dismissible-alert">
     <button class="close js-close-alert">x</button>
     Sucessful form submission!!
   </div>
